<resources>
    <!--preference key strings-->
    <string name="scene_settings_key">scene_settings_key</string>
    <string name="edit_key">edit_key</string>
    <string name="scene_bind_key">scene_bind_key</string>
    <string name="scene_feature_key">scene_feature_key</string>
    <string name="alarm_title_key">alarm_title_key</string>

    <string name="no_data">ERROR</string>
    <!--original strings-->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!--add from lenovo smart scene res-CN-->
    <string name="app_name">智能场景</string>
    <string name="audio_profiles_title">情景模式</string>
    <string name="bind_ap_title">绑定无线网络</string>
    <string name="empty">未定义任何场景，请添加场景</string>
    <string name="normal">标准</string>
    <string name="meeting">振动</string>
    <string name="mute">静音</string>
    <string name="outdoor">户外</string>
    <string name="audio_profiles">情景模式</string>
    <string name="delete">删除</string>
    <string name="save">保存</string>
    <string name="new_scene">新建场景</string>
    <string name="WLAN">WLAN</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="edit_title">场景名称</string>
    <string name="split">~</string>
    <string name="alarmTitle">定时切换</string>
    <string name="lunch">午休</string>
    <string name="office">办公室</string>
    <string name="meetings">会议</string>
    <string name="home">家</string>
    <string name="rest_in_night">卧室</string>
    <string name="redefine">自定义场景</string>
    <string name="scene_feature">场景功能</string>
    <string name="scene_bind">场景切换方式</string>
    <string name="alarm_title">定时切换</string>
    <string name="scene_start">场景启动时间</string>
    <string name="scene_end">场景关闭时间</string>
    <string name="switch_time">定时切换时间</string>
    <string name="switch_time_frequency">定时切换频率</string>
    <string name="switch_once">一次</string>
    <string name="switch_every_day">每天</string>
    <string name="switch_week_day">工作日</string>
    <string name="switch_week_end">周末</string>
    <string name="menu_help">帮助</string>
    <string name="no_available_bind_ap">没有可以绑定的无线网络</string>
    <string name="invalid_alarm_time_setting">时间设置无效</string>
    <string name="scene_enter_notification_summary">您已经进入%s场景</string>
    <string name="scene_exit_toast">您已经退出%s场景</string>
    <string name="scene_title_empty_name_note">请输入场景名称</string>
    <string name="scene_title_used_name_note">场景名称重复，请重新输入</string>
    <string name="scene_title_invaild_name">场景名称包含不合法的字符</string>
    <string name="scene_enable_time_conflict">打开失败，场景的生效时间和其他已经打开的场景时间冲突。</string>
    <string name="scene_list_head_alarm">定时启动场景</string>
    <string name="scene_list_head_ap">绑定无线网络场景</string>
    <string name="scene_list_head_nfc">NFC 标签场景</string>
    <string name="trigger_nfc_note">接触 NFC 标签后启动场景</string>
    <string name="trigger_ap_note">当连接某一无线网络时,自动切换场景</string>
    <string name="trigger_alarm_note">可设定场景的开始时间和结束时间</string>
    <string name="car">车载</string>
    <string name="action_add">添加场景功能</string>
    <string name="bluetooth_title">蓝牙</string>
    <string name="no_bundle_ap">未绑定无线网络</string>
    <string name="nfc_title">NFC 场景</string>
    <string name="airplane_title">飞行模式</string>
    <string name="open_app_title">打开应用</string>
    <string name="data_connection_title">数据连接</string>
    <string name="brightness_title">背光</string>
    <string name="gps_title">GPS</string>
    <string name="brightness_auto">自动</string>
    <string name="brightness_darker">较暗</string>
    <string name="brightness_middle">正常</string>
    <string name="brightness_brighter">较亮</string>
    <string name="brightness_brightest">最亮</string>
    <string name="scene_enable_null_action">没有添加场景功能</string>
    <string name="sim_on">打开数据连接</string>
    <string name="sim_off">关闭数据连接</string>
    <string name="sim_not_found">未找到SIM卡</string>
    <string name="scene_edit">编辑场景</string>
    <string name="title_activity_nfc_write">NFC 制作</string>
    <string name="nfc_note_write_nfc">请将标签贴近手机背面以写入数据</string>
    <string name="nfc_note_bundle_nfc">请将标签贴近手机背面以关联标签</string>
    <string name="nfc_write_success">标签制作成功</string>
    <string name="nfc_write_failed">标签制作失败</string>
    <string name="nfc_bundle_success">标签关联成功</string>
    <string name="nfc_write_len_extend">无法写入，数据长度超过了标签的最大容量</string>
    <string name="title_activity_action_scene">活动场景</string>
    <string name="action_open">打开</string>
    <string name="action_close">关闭</string>
    <string name="open_nfc_dialog_message">NFC 功能未开启，将无法关联或者制作标签，是否进入设置?</string>
    <string name="nfc_tag_scene_enter_title">NFC\"%s\"场景已经启动</string>
    <string name="nfc_bind_ok">已经关联 NFC 标签</string>
    <string name="nfc_bind_no">当前未和 NFC 标签关联</string>
    <string name="nfc_tag_note">NFC 标签场景</string>
    <string name="not_found_app">未找到包名\"%s所对应的应用程序</string>
    <string name="airplane_data_connection_conflit">打开数据连接和打开飞行模式存在冲突，请删除一项</string>
    <string name="icon_get_camera">拍照</string>
    <string name="icon_get_picture">本地照片</string>
    <string name="trigger_select_title">请选择场景切换方式</string>
    <string name="write_nfc">制作标签</string>
    <string name="bundle_nfc">关联标签</string>
    <string name="nfc_write_note">标签制作后，其他支持 NFC 智能场景的联想手机也可以识别到标签，并切到此标签场景</string>
    <string name="nfc_bundle_note">关联标签后，当手机和此标签接近时，可以切换到 NFC 标签智能场景</string>
    <string name="nfc_tag_bundled_message">注意：此标签已经和某个 NFC 场景关联过，当和本手机接触时会优先执行关联场景。但是其他支持智能场景的联想手机可以切换到标签内的场景。</string>
    <string name="null_package_name_note">未选择应用程序.</string>
    <string name="next">下一步</string>
    <string name="title_activity_help">帮助</string>
    <string name="help_title">智能场景及优先级说明</string>
    <string name="help_summary">提供两类智能场景</string>
    <string name="help_content">"按时间：根据设定的时间自动切换场景；
按网络 (AP)：根据绑定的网络，连接时自动切换场景;
优先级：定时场景>绑定无线网络场景。"</string>
    <string name="help_summary_nfc">提供三类智能场景</string>
    <string name="help_content_nfc">"按时间：根据设定的时间自动切换场景；
按网络 (AP)：根据绑定的网络，连接时自动切换场景；
NFC：根据 NFC 设定的标签，进行场景切换；
优先级：NFC场景>定时场景>绑定无线网络场景。"</string>
    <string name="new_sim">新SIM卡</string>
    <string name="icon_select_title">场景图标</string>
    <string name="exit_edit_dialog_title">舍弃</string>
    <string name="exit_edit_dialog_message">退出后，你的修改将会被舍弃。</string>
    <string name="wlan_select_head_available">可绑定的无线网络</string>
    <string name="wlan_select_head_bound">已被绑定的无线网络</string>
    <string name="wlan_select_open_wlan">WLAN 功能未开启，将无法获取可用接入点，是否进入设置?</string>
    <string name="scene_name_too_long">场景名太长</string>
</resources>
