<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res-auto"
    android:key="@string/scene_settings_key"
    android:title="@string/new_scene">

    <com.xbb.preference.EditPreference
        android:key="@string/edit_key"
        android:title="@string/edit_title"/>

    <PreferenceCategory
        android:key="@string/scene_bind_key"
        android:title="@string/scene_bind">

        <com.xbb.preference.CommonPreference
            android:key="@string/alarm_title_key"
            android:title="@string/alarm_title" />

    </PreferenceCategory>


    <PreferenceCategory
        android:key="@string/scene_feature_key"
        android:title="@string/scene_feature">

    </PreferenceCategory>

</PreferenceScreen>